# spectrum

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish_conda.yml  publish_docker.yml  python-package.yml  python-publish.yml  test_spectrum.yaml
docs/: Makefile  README.md  conf.py  index.rst  installation.rst  make.bat  usage.rst
spectrum/: __init__.py  cli.py
spectrum/cna/: __init__.py  commands.py
spectrum/genotype/: __init__.py
tests/: __init__.py  test_spectrum.py
