[tool.poetry]
name = "spectrum"
version = "0.1.0"
description = ""
authors = ["msk-access <rons.shah@gmail.com>"]
classifiers = [
	"Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
]
[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}
genotype-variants = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
